fix path of configs

--- a/config/template.yml
+++ b/config/template.yml
@@ -2,7 +2,7 @@ client-url: '127.0.0.1:8000'
 log-file: 'lcongra.log'
 order-queue-size: -1
 pair: "BTC-USDT"
-api-key: "" 
-api-secret: ""
+# api-key: "" 
+# api-secret: ""
 
 
