prepared to deploying

--- a/config/template.yml
+++ b/config/template.yml
@@ -1,8 +1,7 @@
-client-url: '127.0.0.1:8000'
+lient-url: '127.0.0.1:8000'
 log-file: 'lcongra.log'
 order-queue-size: -1
 pair: "BTC-USDT"
+interval: "1m"
 # api-key: "" 
 # api-secret: ""
-
-
